--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,27 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "4.2.2"
 "django.environ" = "*"
-dj-database-url = "*"
+dj-database-url = "2.0.0"
+asgiref = "3.7.2"
+brotli = "1.0.9"
+certifi = "2023.5.7"
+distlib = "0.3.6"
+django-cors-headers = "4.1.0"
+django-environ = "0.10.0"
+filelock = "3.12.1"
+gunicorn = "20.1.0"
+pipenv = "2023.6.12"
+platformdirs = "3.5.3"
+psycopg2-binary = "2.9.6"
+python-dotenv = "1.0.0"
+sqlparse = "0.4.4"
+typing-extensions = "4.6.3"
+tzdata = "2023.3"
+virtualenv = "20.23.0"
+virtualenv-clone = "0.5.7"
+whitenoise = "6.5.0"
 
 [dev-packages]
 
